cambios para el login y algunas cosas mas